# microservices

./: .gitignore  LICENSE  README.md  devbox.json
.github/PULL_REQUEST_TEMPLATE/: sample.md
.github/workflows/: deploy-nginx-gateway.yml.dev
docs/: development-secrets.md  service-api-gateway.md  start-here.md
infra/: .gitattributes  .gitignore
infra/infra/: README.md
infra/manifests/base/: kustomization.yaml
infra/manifests/base/api-gateway/: configmap.yaml  deployment.yaml  service.yaml
infra/manifests/base/auth-service/: deployment.yaml
infra/manifests/overlays/dev/: kustomization.yaml  namespace.yaml
infra/manifests/overlays/prod/: kustomization.yaml  namespace.yaml
infra/manifests/overlays/staging/: kustomization.yaml  namespace.yaml
manifests/base/api-gateway/: deployment.yaml  service.yaml
manifests/base/auth-service/: deployment.yaml  service.yaml
manifests/overlays/dev/: kustomization.yaml
provision/: README.md  kubernetes.tf
scripts/: load-secrets.sh
services/api-gateway/: Cargo.toml  Dockerfile  README.md
services/api-gateway/src/: main.rs
services/api-gateway/src/middlewares/: authorize.rs  mod.rs
services/api-gateway/src/routes/: auth.rs  mod.rs  users.rs
services/auth/: .dockerignore  .env.example  Dockerfile  eslint.config.js  package-lock.json  tsconfig.json  vitest.config.ts
services/auth/source/: server.ts
services/auth/source/controllers/: login.controller.ts  (+5 more)
services/auth/supabase/: config.toml
services/users/: .gitignore  .prettierrc  package-lock.json  package.json
services/users/tests/: README.md
(+17 files in other folders)
